Fixed invisible navbar overlapping page

--- a/css/2026.css
+++ b/css/2026.css
@@ -101,34 +101,19 @@ body
 
 .navbar
 {
-    padding: 1.25rem 0.625rem 0.625rem 0.625rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 100%;
-    height: auto;
+    height: 0;
+}
+
+.navbar .logo
+{
     position: fixed;
-    top: 0;
-    left: 0;
     z-index: 100;
-}
-
-.navbar_container
-{
-    display: grid;
-    width: 100%;
-    min-height: 10vh;
-    grid-template-columns: 6fr 6fr 6fr;
-    padding: 0px 20px;
-    grid-template-areas:
-    "logo season buttons"
-}
-
-.navbar_container .logo
-{
+    top: 2rem;
+    left: 2rem;
     display: flex;
-    width: 100%;
-    height: 100%;
     justify-content: flex-start;
     align-items: flex-start;
     transition: all 0.4s ease;
@@ -136,67 +121,29 @@ body
     pointer-events: none;
 }
 
-.navbar_container .logo.show-logo {
+.navbar .logo.show-logo {
     opacity: 1;
     pointer-events: all;
 }
 
-.navbar_container .logo img
+.navbar .logo img
 {
     width: 6rem;
     height: 6rem;
 }
 
-.navbar_container .season
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    transition: all 0.4s ease;
-    opacity: 1;
-    transform: translateX(0);
-}
-
-.navbar_container .season.hide-season {
-    opacity: 0;
-    transform: translateX(-200px);
-    pointer-events: none;
-}
-
-.navbar_container .title
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 3.75rem;
-    font-size: 1.875rem;
-    font-weight: 600;
-    color: var(--color-lime-moss)
-}
-
-.navbar_container .year
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 4.375rem;
-    font-size: 3.125rem;
-    font-weight: 600;
-    color: var(--color-lavender-mist);
-}
-
-.navbar_container .buttons {
+.navbar .buttons {
+    position: fixed;
+    z-index: 100;
+    top: 3rem;
+    right: 6rem;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 12px;
-    height: 100%;
 }
 
-/* STANDARD BUTTON (Expands on Hover) */
+/* Expands on Hover BUTTON */
 .single_button {
     display: flex;
     align-items: center;
@@ -260,7 +207,7 @@ body
 }
 
 
-/* WIDE BUTTON (Static, Color Swap)*/
+/* Static, Color Swap BUTTON*/
 .single_wide_button {
     display: flex;
     align-items: center;
@@ -305,7 +252,6 @@ body
     transition: all 0.3s ease;
 }
 
-/* --- Hover Effect (Color Swap) --- */
 .single_wide_button:hover {
     background-color: var(--color-charcoal-blue);
     transform: translateY(-5px);
@@ -338,14 +284,63 @@ body
 .header
 {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     width: 100%;
     background: url("/img/2026/BlurryGradient1.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 8rem;
     scroll-snap-type: y mandatory;
+    padding: 2rem 0;
+}
+
+.season_title
+{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.season_title .season
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    transition: all 0.4s ease;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.season_title .season.hide-season {
+    opacity: 0;
+    transform: translateX(-200px);
+    pointer-events: none;
+}
+
+.season_title .title
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 3.75rem;
+    font-size: 1.875rem;
+    font-weight: 600;
+    color: var(--color-lime-moss)
+}
+
+.season_title .year
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 4.375rem;
+    font-size: 3.125rem;
+    font-weight: 600;
+    color: var(--color-lavender-mist);
 }
 
 .header_container
@@ -1198,23 +1193,12 @@ body
         width: 80%;
     }
 
-    .navbar_container
-    {
-        display: grid;
-        width: 100%;
-        height: 10vh;
-        grid-template-columns: 6fr;
-        padding: 0px 20px;
-        grid-template-areas:
-        "season"
-    }
-
-    .navbar_container .logo
+    .navbar .logo
     {
         display: none;
     }
 
-    .navbar_container .buttons
+    .navbar .buttons
     {
         display: none;
     }
